attach student to halaqa
